homotopy-model/tests/snapshots/actions__construct_braid_contraction_signature.snap
---
source: homotopy-model/tests/actions.rs
assertion_line: 41
expression: proof.signature
---
Signature(
    Tree {
        nodes: [
            NodeData {
                data: Folder(
                    FolderInfo {
                        id: 0,
                        name: "",
                        open: true,
                    },
                ),
                children: [
                    Node(
                        1,
                    ),
                    Node(
                        3,
                    ),
                    Node(
                        4,
                    ),
                ],
                parent: None,
            },
            NodeData {
                data: Item(
                    GeneratorInfo {
                        generator: 0:0,
                        name: "Cell 0",
                        oriented: false,
                        invertible: false,
                        single_preview: true,
                        color: Color(
                            Rgb {
                                red: 41,
                                green: 128,
                                blue: 185,
                                standard: PhantomData,
                            },
                        ),
                        shape: Circle,
                        diagram: Diagram0(
                            0:0,
                        ),
                    },
                ),
                children: [],
                parent: Some(
                    Node(
                        0,
                    ),
                ),
            },
            NodeData {
                data: Item(
                    GeneratorInfo {
                        generator: 1:1,
                        name: "Cell 1",
                        oriented: false,
                        invertible: false,
                        single_preview: true,
                        color: Color(
                            Rgb {
                                red: 192,
                                green: 57,
                                blue: 43,
                                standard: PhantomData,
                            },
                        ),
                        shape: Circle,
                        diagram: DiagramN {
                            source: Diagram0(
                                0:0,
                            ),
                            cospans: [
                                Cospan {
                                    forward: Rewrite0(
                                        0:0,
                                        1:1,
                                    ),
                                    backward: Rewrite0(
                                        0:0,
                                        1:1,
                                    ),
                                },
                            ],
                        },
                    },
                ),
                children: [],
                parent: None,
            },
            NodeData {
                data: Item(
                    GeneratorInfo {
                        generator: 1:2,
                        name: "Cell 1",
                        oriented: false,
                        invertible: false,
                        single_preview: true,
                        color: Color(
                            Rgb {
                                red: 192,
                                green: 57,
                                blue: 43,
                                standard: PhantomData,
                            },
                        ),
                        shape: Circle,
                        diagram: DiagramN {
                            source: DiagramN {
                                source: Diagram0(
                                    0:0,
                                ),
                                cospans: [],
                            },
                            cospans: [
                                Cospan {
                                    forward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 1:2), backward: Rewrite0(0:0, 1:2) }, slices: [] } }] },
                                    backward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 1:2), backward: Rewrite0(0:0, 1:2) }, slices: [] } }] },
                                },
                            ],
                        },
                    },
                ),
                children: [],
                parent: Some(
                    Node(
                        0,
                    ),
                ),
            },
            NodeData {
                data: Item(
                    GeneratorInfo {
                        generator: 2:3,
                        name: "Cell 2",
                        oriented: false,
                        invertible: false,
                        single_preview: true,
                        color: Color(
                            Rgb {
                                red: 243,
                                green: 156,
                                blue: 18,
                                standard: PhantomData,
                            },
                        ),
                        shape: Circle,
                        diagram: DiagramN {
                            source: DiagramN {
                                source: DiagramN {
                                    source: Diagram0(
                                        0:0,
                                    ),
                                    cospans: [],
                                },
                                cospans: [],
                            },
                            cospans: [
                                Cospan {
                                    forward: RewriteN { dimension: 2, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 2:3), backward: Rewrite0(0:0, 2:3) }, slices: [] } }] }, backward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 2:3), backward: Rewrite0(0:0, 2:3) }, slices: [] } }] } }, slices: [] } }] },
                                    backward: RewriteN { dimension: 2, cones: [Cone { index: 0, internal: ConeInternal { source: [Cospan { forward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 1:2), backward: Rewrite0(0:0, 1:2) }, slices: [] } }] }, backward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 1:2), backward: Rewrite0(0:0, 1:2) }, slices: [] } }] } }], target: Cospan { forward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 2:3), backward: Rewrite0(0:0, 2:3) }, slices: [] } }] }, backward: RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [], target: Cospan { forward: Rewrite0(0:0, 2:3), backward: Rewrite0(0:0, 2:3) }, slices: [] } }] } }, slices: [RewriteN { dimension: 1, cones: [Cone { index: 0, internal: ConeInternal { source: [Cospan { forward: Rewrite0(0:0, 1:2), backward: Rewrite0(0:0, 1:2) }], target: Cospan { forward: Rewrite0(0:0, 2:3), backward: Rewrite0(0:0, 2:3) }, slices: [Rewrite0(1:2, 2:3)] } }] }] } }] },
                                },
                            ],
                        },
                    },
                ),
                children: [],
                parent: Some(
                    Node(
                        0,
                    ),
                ),
            },
        ],
        root: Node(
            0,
        ),
    },
)
