homotopy-model/tests/snapshots/actions__construct_braiding_half_bubbles_signature.snap
---
source: homotopy-model/tests/actions.rs
expression: proof.signature
---
Signature(
    Tree {
        nodes: [
            NodeData {
                data: Folder(
                    FolderInfo {
                        id: 0,
                        name: "",
                        open: true,
                    },
                ),
                children: [
                    Node(
                        1,
                    ),
                    Node(
                        2,
                    ),
                ],
                parent: None,
            },
            NodeData {
                data: Item(
                    GeneratorInfo {
                        generator: 0:0,
                        name: "Cell 0",
                        oriented: false,
                        invertible: false,
                        single_preview: true,
                        color: Color(
                            Rgb {
                                red: 41,
                                green: 128,
                                blue: 185,
                                standard: PhantomData,
                            },
                        ),
                        shape: Circle,
                        diagram: Diagram0(
                            0:0,
                            +,
                        ),
                    },
                ),
                children: [],
                parent: Some(
                    Node(
                        0,
                    ),
                ),
            },
            NodeData {
                data: Item(
                    GeneratorInfo {
                        generator: 1:1,
                        name: "Cell 1",
                        oriented: false,
                        invertible: true,
                        single_preview: true,
                        color: Color(
                            Rgb {
                                red: 192,
                                green: 57,
                                blue: 43,
                                standard: PhantomData,
                            },
                        ),
                        shape: Circle,
                        diagram: DiagramN {
                            source: Diagram0(
                                0:0,
                                +,
                            ),
                            cospans: [
                                Cospan {
                                    forward: Rewrite0(
                                        Diagram0(
                                            0:0,
                                            +,
                                        ),
                                        Diagram0(
                                            1:1,
                                            +,
                                        ),
                                        Some(
                                            Label(
                                                BoundaryPath(
                                                    Source,
                                                    0,
                                                ),
                                                {
                                                    [],
                                                },
                                            ),
                                        ),
                                    ),
                                    backward: Rewrite0(
                                        Diagram0(
                                            0:0,
                                            +,
                                        ),
                                        Diagram0(
                                            1:1,
                                            +,
                                        ),
                                        Some(
                                            Label(
                                                BoundaryPath(
                                                    Target,
                                                    0,
                                                ),
                                                {
                                                    [],
                                                },
                                            ),
                                        ),
                                    ),
                                },
                            ],
                        },
                    },
                ),
                children: [],
                parent: Some(
                    Node(
                        0,
                    ),
                ),
            },
        ],
        root: Node(
            0,
        ),
    },
)
